Imported Upstream version 0.36

--- a/doc/man/cgexec.1
+++ b/doc/man/cgexec.1
@@ -25,7 +25,7 @@ This flag can be used multiple times to
 define multiple pairs of lists of controllers
 and relative paths.
 Instead of the list of all mounted controllers,
-wildcard \fBb*b\fR can be used.
+wildcard \fBb"*b"\fR can be used.
 
 If this option is not used then
 \fBcgexec\fR will automatically place the task to the right
