--- a/doc/man/cgred.conf.5
+++ b/doc/man/cgred.conf.5
@@ -17,7 +17,7 @@ specifies the configuration file for cgred service
 .TP
 \fBLOG_FILE\fR
 variable specifies the file to which logs will be written
-(by default arew not sent to a file but to syslog)
+(by default they are not sent to a file but to syslog)
 
 .TP
 \fBNODAEMON\fR
@@ -26,8 +26,8 @@ run cgred in non-daemon mode
 
 .TP
 \fBLOG\fR
-define the verbosity of logging. Accepted values are '-v', '-vv', '-q' and
-'--nolog'.
+define the verbosity of logging. Accepted values are '-v', '-vv', '-q'
+and '--nolog'.
 .LP
 
 
@@ -38,7 +38,7 @@ define the verbosity of logging. Accepted values are '-v', '-vv', '-q' and
 .B /etc/cgred.conf
 .TP
 default libcgroup configuration file
-.PD.
+.PD .
 
 .SH SEE ALSO
 cgrules.conf (5),
