--- a/doc/man/cgclassify.1
+++ b/doc/man/cgclassify.1
@@ -36,9 +36,9 @@ control group based on \fB/etc/cgrules.conf\fR.
 .TP
 .B --sticky
 If this option is used, the daemon of service cgred (cgrulesengd
-process) does not change both the specified \fBpidlist\fR and thier
+process) does not change both the specified \fBpidlist\fR and their
 children tasks. Without this option, the daemon does not change the
-specified \fBpidlist\fR but it changes thier children tasks to the
+specified \fBpidlist\fR but it changes their children tasks to the
 right cgroup based on \fB/etc/cgrules.conf\fR automatically.
 
 .SH FILES
