--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libcgroup (0.36.1-2) unstable; urgency=low
+
+  * [8a9de6] Install shared object and symlinks in /lib (Closes: #583513)
+
+ -- Jon Bernard <jbernard@debian.org>  Thu, 27 May 2010 20:13:39 -0400
+
 libcgroup (0.36.1-1) unstable; urgency=low
 
   * [d1d65a] Add Vcs fields to debian/control
