--- a/doc/man/cgclassify.1
+++ b/doc/man/cgclassify.1
@@ -6,7 +6,7 @@
 cgclassify \- move running task(s) to given cgroups
 
 .SH SYNOPSIS
-\fBcgclassify\fR [\fB-g\fR <\fIcontrollers>:<path\fR>] [--sticky] <\fIpidlist\fR>
+\fBcgclassify\fR [\fB-g\fR <\fIcontrollers>:<path\fR>] [--sticky | --cancel-sticky] <\fIpidlist\fR>
 
 .SH DESCRIPTION
 this command moves processes defined by the list
@@ -40,6 +40,13 @@ process) does not change both the specified \fBpidlist\fR and their
 children tasks. Without this option, the daemon does not change the
 specified \fBpidlist\fR but it changes their children tasks to the
 right cgroup based on \fB/etc/cgrules.conf\fR automatically.
+
+.TP
+.B --cancel-sticky
+If this option is used, the daemon of service cgred (cgrulesengd
+process) can change both the specified \fBpidlist\fR and their
+children tasks to right cgroup based on \fB/etc/cgrules.conf\fR
+automatically.
 
 .SH FILES
 .LP
