--- a/doc/man/cgdelete.1
+++ b/doc/man/cgdelete.1
@@ -1,7 +1,7 @@
 .\" Copyright (C) 2009 Red Hat, Inc. All Rights Reserved.
 .\" Written by Jan Safranek <jsafrane@redhat.com>
 
-.TH CGEXEC  1 2009-10-26 "Linux" "libcgroup Manual"
+.TH CGDELETE  1 2009-10-26 "Linux" "libcgroup Manual"
 .SH NAME
 
 cgdelete \- remove control group(s)
@@ -23,4 +23,4 @@ groups specified.
 Recursively remove all subgroups.
 
 .SH SEE ALSO
-cgcreate (1), lscgroup(1), cgclear(1)
+cgcreate (1), lscgroup (1), cgclear (1)
