--- a/debian/TODO
+++ b/debian/TODO
@@ -1,3 +1,5 @@
 * update package descriptions
 * update sample initscripts
 * update copyright file
+* rething package priorities and sections
+* come up with an failsafe and upgrade-proof initscript
