--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libcgroup (0.40~rc1-5) experimental; urgency=low
+
+  * Adding patch to make initscript exit if stop fails (Closes: #642946).
+
+ -- Daniel Baumann <mail@daniel-baumann.ch>  Mon, 21 Oct 2013 17:23:33 +0200
+
 libcgroup (0.40~rc1-4) experimental; urgency=low
 
   * Renaming cgroup-bin to cgroup-tools for consistency.
