--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libcgroup (0.41-3) unstable; urgency=low
+
+  * Correcting GPL boilerplate texts in copyright.
+  * Building libcgroup on linux-any only.
+
+ -- Daniel Baumann <mail@daniel-baumann.ch>  Fri, 18 Jul 2014 11:34:54 +0200
+
 libcgroup (0.41-2) unstable; urgency=low
 
   * Building with dh --parallel.
