--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
-libcgroup (0.41-8~ArchPhénix) unstable; urgency=low
+libcgroup (0.41-8~ArchPhoenix) unstable; urgency=low
+
   * Add systemd service file
 
-  -- Magissia <packages@magissia.com> Tue, 23 Aug 2016 19:06:02 +0200
+ -- Magissia <packages@magissia.com>  Tue, 23 Aug 2016 19:06:02 +0200
 
 libcgroup (0.41-8) unstable; urgency=medium
 
